--- a/src/_miscs.scss
+++ b/src/_miscs.scss
@@ -267,12 +267,14 @@ a.tag:hover {
   border-radius: 4px;
 }
 
-/* Page properties */
-.page-properties,
-.block-properties {
+/* Page properties; body is to slightly increase specifity in the face of the
+AwesomeProps plugin. !important are also to override the plugin's styles */
+body :is(.page-properties, .block-properties) {
   margin: 0 0 0.5em;
+  padding: 4px 8px;
   font-size: 0.8em;
-  background: var(--ls-secondary-background-color);
+  border: none !important;
+  background: var(--ls-secondary-background-color) !important;
   width: fit-content;
   padding-right: 2rem;
   max-width: var(--ct-block-max-width);
